--- a/arch/arm64/configs/toco_defconfig
+++ b/arch/arm64/configs/toco_defconfig
@@ -46,6 +46,7 @@ CONFIG_PROFILING=y
 CONFIG_JUMP_LABEL=y
 CONFIG_CC_STACKPROTECTOR_STRONG=y
 CONFIG_KLAPSE=y
+CONFIG_FORCE_FAST_CHARGE=y
 CONFIG_MODULES=y
 CONFIG_MODULE_UNLOAD=y
 CONFIG_MODVERSIONS=y
