--- a/.gitignore
+++ b/.gitignore
@@ -124,6 +124,9 @@ all.config
 # Kdevelop4
 *.kdev4
 
+# Object directory
+out/
+
 # fetched Android config fragments
 kernel/configs/android-*.cfg
 
