--- a/arch/arm64/boot/dts/qcom/sdmmagpie.dtsi
+++ b/arch/arm64/boot/dts/qcom/sdmmagpie.dtsi
@@ -930,6 +930,19 @@
 			   &cdsp_cdsp_l3_lat>;
 
 		#clock-cells = <1>;
+		qcom,cpufreq-table-0 =
+			<576000>,
+			<1497600>,
+			<1612800>,
+			<1708800>,
+			<1804800>;
+
+		qcom,cpufreq-table-6 =
+			<652800>,
+			<1094400>,
+			<1324800>,
+			<1939200>,
+			<2208000>;
 	};
 
 	cpucc_debug: syscon@182a0018 {
