ARM64: configs: {davinci,phoenix,toco,tucana}: Unset LCD_CLASS_DEVICE
CONFIG_LCD_CLASS_DEVICE is default=m, and we don't use it.

Bug: 78574169
Change-Id: I5d67fb7aa342971f2b7db235b4d6c914557347a3
Signed-off-by: Chris Fries <cfries@google.com>

--- a/arch/arm64/configs/davinci_defconfig
+++ b/arch/arm64/configs/davinci_defconfig
@@ -418,6 +418,7 @@ CONFIG_DRM_ANALOGIX_ANX7625=y
 CONFIG_DRM_LT_LT9611=y
 CONFIG_FB_ARMCLCD=y
 CONFIG_BACKLIGHT_QCOM_SPMI_WLED=y
+# CONFIG_LCD_CLASS_DEVICE is not set
 CONFIG_SOUND=y
 CONFIG_SND=y
 CONFIG_SND_DYNAMIC_MINORS=y
