--- a/arch/arm64/configs/davinci_defconfig
+++ b/arch/arm64/configs/davinci_defconfig
@@ -394,6 +394,7 @@ CONFIG_REGULATOR_REFGEN=y
 CONFIG_REGULATOR_RPMH=y
 CONFIG_REGULATOR_STUB=y
 CONFIG_MEDIA_SUPPORT=y
+# CONFIG_IR_MSM_GENI is not set
 CONFIG_MEDIA_CAMERA_SUPPORT=y
 CONFIG_MEDIA_DIGITAL_TV_SUPPORT=y
 CONFIG_MEDIA_CONTROLLER=y
