--- a/arch/arm64/configs/phoenix_defconfig
+++ b/arch/arm64/configs/phoenix_defconfig
@@ -398,6 +398,7 @@ CONFIG_LIRC=y
 CONFIG_RC_DEVICES=y
 CONFIG_IR_SPI=y
 CONFIG_MEDIA_SUPPORT=y
+# CONFIG_IR_MSM_GENI is not set
 CONFIG_MEDIA_CAMERA_SUPPORT=y
 CONFIG_MEDIA_DIGITAL_TV_SUPPORT=y
 CONFIG_MEDIA_CONTROLLER=y
