--- a/arch/arm64/configs/tucana_defconfig
+++ b/arch/arm64/configs/tucana_defconfig
@@ -404,6 +404,7 @@ CONFIG_IR_SPI=y
 CONFIG_MEDIA_SUPPORT=y
 # CONFIG_IR_MSM_GENI is not set
 CONFIG_MEDIA_CAMERA_SUPPORT=y
+CONFIG_CSID_CAMERA=y
 CONFIG_SOFTLED_CAMERA=y
 CONFIG_MEDIA_DIGITAL_TV_SUPPORT=y
 CONFIG_MEDIA_CONTROLLER=y
