--- a/arch/arm64/configs/tucana_defconfig
+++ b/arch/arm64/configs/tucana_defconfig
@@ -405,6 +405,7 @@ CONFIG_MEDIA_SUPPORT=y
 # CONFIG_IR_MSM_GENI is not set
 CONFIG_MEDIA_CAMERA_SUPPORT=y
 CONFIG_CSID_CAMERA=y
+CONFIG_NO_DELAY_DMA_UNMAP_CAMERA=y
 CONFIG_SOFTLED_CAMERA=y
 CONFIG_MEDIA_DIGITAL_TV_SUPPORT=y
 CONFIG_MEDIA_CONTROLLER=y
