--- a/arch/arm64/configs/davinci_defconfig
+++ b/arch/arm64/configs/davinci_defconfig
@@ -9,7 +9,7 @@ CONFIG_IRQ_TIME_ACCOUNTING=y
 CONFIG_TASKSTATS=y
 CONFIG_TASK_XACCT=y
 CONFIG_TASK_IO_ACCOUNTING=y
-CONFIG_PSI=y
+# CONFIG_PSI is not set
 CONFIG_RCU_EXPERT=y
 CONFIG_RCU_FAST_NO_HZ=y
 CONFIG_RCU_NOCB_CPU=y
@@ -22,7 +22,7 @@ CONFIG_UCLAMP_TASK_GROUP=y
 CONFIG_UCLAMP_ASSIST=y
 CONFIG_CGROUPS=y
 CONFIG_PELT_UTIL_HALFLIFE_16=y
-CONFIG_MEMCG=y
+# CONFIG_MEMCG is not set
 CONFIG_MEMCG_SWAP=y
 CONFIG_BLK_CGROUP=y
 CONFIG_CGROUP_SCHED=y
@@ -630,6 +630,9 @@ CONFIG_QCOM_LLCC_PMU=y
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_ANDROID_BINDERFS=y
+CONFIG_ANDROID_SIMPLE_LMK=y
+CONFIG_ANDROID_SIMPLE_LMK_MINFREE=128
+CONFIG_ANDROID_SIMPLE_LMK_TIMEOUT_MSEC=200
 CONFIG_NVMEM_SPMI_SDAM=y
 CONFIG_STM=y
 CONFIG_SENSORS_SSC=y
